13/task2/ingress-tls.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  ports:
  - name: dns-tcp
    port: 9002
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:
  - hosts:
      - myapp.example.com
    secretName: testsecret-tls
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-backend
            port:
              number: 9002
